--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^4.0.4",
+    "@apollo/client": "^3.14.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -45,9 +45,11 @@
     "next": "15.3.5",
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.4.6",
+    "oidc-client-ts": "^3.3.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
+    "react-oidc-context": "^3.3.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.0.2",
     "sonner": "^2.0.6",
