--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.9.0",
+    "@stripe/stripe-js": "^8.0.0",
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
@@ -42,7 +43,7 @@
     "date-fns": "^4.1.0",
     "graphql": "^16.11.0",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^15.3.5",
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -51,6 +52,7 @@
     "react-redux": "^9.2.0",
     "recharts": "^3.0.2",
     "sonner": "^2.0.6",
+    "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^3.25.74"
